--- a/latex/siggraph2013/colorCompat.tex
+++ b/latex/siggraph2013/colorCompat.tex
@@ -1,9 +1,9 @@
 \section{Color Compatibility Function}
 \label{sec:colorCompat}
 
-The unary and binary coloring scoring functions defined in the last two sections can indicate whether an individual pattern region is well-colored or whether two adjacent regions are colored well in concert, but they have no knowledge of the global harmony between all colors in the pattern. To enforce global consistency, we also use a color compatibility function to score the general appeal of the colors in a pattern, based on the compatibility model introduced by O'Donovan et al.~\shortcite{ODonovan}. This compatibility model predicts 0-5 numeric aesthetic ratings for five-color `color themes,' which are ordered rows of five colors. 
+The unary and binary coloring scoring functions defined in the previous sections indicate whether an individual pattern region is well-colored or whether two adjacent regions are colored well in concert, but they have no knowledge of the global harmony between all colors in the pattern. To enforce global consistency, we include a color compatibility function based on the model introduced by O'Donovan et al.~\shortcite{ODonovan}. Their model predicts 0-5 numeric aesthetic ratings for five-color `color themes,' which are ordered rows of five colors. 
 
-We extract such a color theme from a pattern by taking the colors of the five largest color groups and ordering them by size. If the pattern contains fewer than five color groups, we repeat colors in order of size to fill the rest of the theme. Inspection of these extracted themes showed that size-ordering of colors tends to produce themes that are, on average, rated higher than random orderings but lower than the optimal ordering. Additionally, ordering has little effect on discriminative power: in general, low-scoring themes are rated lower than high-scoring themes regardless of permutation.
+We extract such a color theme from a pattern by taking the colors of the five largest color groups and ordering them by size. If the pattern contains fewer than five color groups, we repeat colors in order of size to fill the rest of the theme. Inspection of these extracted themes revealed that size-ordering of colors tends to produce themes that are rated higher than random orderings but lower than the optimal ordering. Additionally, ordering has little effect on discriminative power: in general, low-scoring themes are rated lower than high-scoring themes, regardless of permutation.
 
 To turn a theme's predicted rating into a score consistent with our unary and binary functions, we divide the rating by the maximum possible rating (5) and treat the result as a probability:
 %%%
@@ -11,7 +11,7 @@ To turn a theme's predicted rating into a score consistent with our unary and bi
 \colorCompatInstStats(\colors_1 \ldots \colors_5) = \ln(\texttt{compat}(\colors_1 \ldots \colors_5) / 5)
 \end{equation*}
 %%%
-where $\colors_1 \ldots \colors_5$ are the colors of the five largest color groups in the pattern and \texttt{compat} is the O'Donovan color compatibility model. Our implementation uses the O'Donovan model of color compatibility, but the system is flexible and can accomodate any other color compatibility or harmony model that can assign a score to a set of colors.
+where $\colors_1 \ldots \colors_5$ are the colors of the five largest color groups in the pattern and \texttt{compat} is the O'Donovan color compatibility model. While our implementation uses the O'Donovan model of color compatibility, it is flexible enough to accomodate any other color compatibility or harmony model that can assign a score to a set of colors.
 
 %Previous work has shown that the aesthetic appeal of an image can be improved by increasing the compatibility or harmony of image colors ~\cite{CohenOrHarmonization,DressUp,ColorizationUsingHarmony,ODonovan}. Our model includes a color compatibility term to score the general appeal of the colors in an assignment, based on the compatibility model introduced by O'Donovan et al.~\shortcite{ODonovan}. This compatibility model predicts 0-5 numeric aesthetic ratings for five-color `color themes,' which are ordered rows of five colors. 
 %
