Figure tweaks to try and save space.

--- a/latex/siggraph2013/model.tex
+++ b/latex/siggraph2013/model.tex
@@ -8,7 +8,8 @@ For this task, we turn to the language of \emph{probabilistic factor graphs}. A 
 \begin{figure}[ht]
 %\raisebox{4em}{\includegraphics[width=.2\columnwidth]{figs/factorGraphPattern}} &
 %\includegraphics[width=.7\columnwidth]{figs/factorGraph} 
-\includegraphics[width=\columnwidth]{figs/factorGraphNew}
+\centering
+\includegraphics[width=0.85\columnwidth]{figs/factorGraphNew}
 \caption{A factor graph for an example pattern template. Variable nodes are colored according to their corresponding color group in the pattern.}
 \label{fig:FactorGraph}
 \end{figure}
