I am a god of removing reference cruft.

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -1,14 +1,10 @@
 @INPROCEEDINGS{ColorizationUsingHarmony, 
 author={Sauvaget, C. and Manuel, S. and Vittaut, J.-N. and Suarez, J. and Boyer, V.}, 
-booktitle={Signal-Image Technology and Internet-Based Systems (SITIS), 2010 Sixth International Conference on}, title={Segmented Images Colorization Using Harmony}, 
-year={2010}, 
-month={dec.}, 
+booktitle={Proc. of Signal-Image Technology and Internet-Based Systems (SITIS) 2010}}, 
+title={Segmented Images Colorization Using Harmony}, 
 volume={}, 
-number={}, 
-pages={153 -160}, 
-keywords={Approximation methods;Color;Computational modeling;Image color analysis;Image segmentation;Pixel;Wheels;computer graphics;image colour analysis;image segmentation;approximation;blank regions;chromatic hue wheel;computer assisted colorization;harmony rules;image colorization;image segmentation;colorization;enhancement;harmony;image processing;stylization;}, 
-doi={10.1109/SITIS.2010.35}, 
-ISSN={},}
+number={},
+}
 
 @article{ODonovan,
   author={Peter O'Donovan and Aseem Agarwala and Aaron Hertzmann },
@@ -22,20 +18,8 @@ ISSN={},}
 @inproceedings{CohenOrHarmonization,
  author = {Cohen-Or, Daniel and Sorkine, Olga and Gal, Ran and Leyvand, Tommer and Xu, Ying-Qing},
  title = {Color harmonization},
- booktitle = {ACM SIGGRAPH 2006 Papers},
- series = {SIGGRAPH '06},
- year = {2006},
- isbn = {1-59593-364-6},
- location = {Boston, Massachusetts},
- pages = {624--630},
- numpages = {7},
- url = {http://doi.acm.org/10.1145/1179352.1141933},
- doi = {10.1145/1179352.1141933},
- acmid = {1141933},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {color harmonization, computational aesthetics, cut-and-paste, image enhancement},
-}
+ booktitle = {Proc. SIGGRAPH 2006},
+ }
 
 @book{Munsell,
   title={A Grammar of Color: A Basic Treatise on the Color System of Albert H. Munsell},
@@ -64,102 +48,37 @@ journal = {Proceedings of the National Academy of Sciences}
 @inproceedings{ScribbleColorization,
  author = {Levin, Anat and Lischinski, Dani and Weiss, Yair},
  title = {Colorization using optimization},
- booktitle = {ACM SIGGRAPH 2004 Papers},
- series = {SIGGRAPH '04},
- year = {2004},
- location = {Los Angeles, California},
- pages = {689--694},
- numpages = {6},
- url = {http://doi.acm.org/10.1145/1186562.1015780},
- doi = {10.1145/1186562.1015780},
- acmid = {1015780},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {colorization, recoloring, segmentation},
-}
+ booktitle = {Proc. SIGGRAPH 2004},
+ }
 
 @inproceedings{TransferColorization,
  author = {Welsh, Tomihisa and Ashikhmin, Michael and Mueller, Klaus},
  title = {Transferring color to greyscale images},
- booktitle = {Proceedings of the 29th annual conference on Computer graphics and interactive techniques},
- series = {SIGGRAPH '02},
- year = {2002},
- isbn = {1-58113-521-1},
- location = {San Antonio, Texas},
- pages = {277--280},
- numpages = {4},
- url = {http://doi.acm.org/10.1145/566570.566576},
- doi = {10.1145/566570.566576},
- acmid = {566576},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {color, image processing, texture synthesis, video},
+ booktitle = {Proc. SIGGRAPH 2002},
 }
 
 @inproceedings{MultimodalColorization,
  author = {Charpiat, Guillaume and Hofmann, Matthias and Sch\"{o}lkopf, Bernhard},
  title = {Automatic Image Colorization Via Multimodal Predictions},
- booktitle = {Proceedings of the 10th European Conference on Computer Vision: Part III},
- series = {ECCV '08},
- year = {2008},
- isbn = {978-3-540-88689-1},
- location = {Marseille, France},
- pages = {126--139},
- numpages = {14},
- url = {http://dx.doi.org/10.1007/978-3-540-88690-7_10},
- doi = {10.1007/978-3-540-88690-7_10},
- acmid = {1478185},
- publisher = {Springer-Verlag},
- address = {Berlin, Heidelberg},
+ booktitle = {Proc. ECCV 2008},
 } 
 
-@article{DressUp,
+@inproceedings{DressUp,
  author = {Yu, Lap-Fai and Yeung, Sai-Kit and Terzopoulos, Demetri and Chan, Tony F.},
  title = {DressUp!: outfit synthesis through automatic optimization},
- journal = {ACM Trans. Graph.},
- issue_date = {November 2012},
- volume = {31},
- number = {6},
- month = nov,
- year = {2012},
- issn = {0730-0301},
- pages = {134:1--134:14},
- articleno = {134},
- numpages = {14},
- url = {http://doi.acm.org/10.1145/2366145.2366153},
- doi = {10.1145/2366145.2366153},
- acmid = {2366153},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {clothing combination, color matching, fashion, functionally realistic, optimization, perception, procedural modeling, variety, virtual world modeling},
+ booktitle = {Proc. SIGGRAPH Asia 2012},
 } 
 
-@article{MaterialMemex,
+@inproceedings{MaterialMemex,
  author = {Jain, Arjun and Thorm\"{a}hlen, Thorsten and Ritschel, Tobias and Seidel, Hans-Peter},
- title = {Material memex: automatic material suggestions for 3D objects},
- journal = {ACM Trans. Graph.},
- issue_date = {November 2012},
- volume = {31},
- number = {6},
- month = nov,
- year = {2012},
- issn = {0730-0301},
- pages = {143:1--143:8},
- articleno = {143},
- numpages = {8},
- url = {http://doi.acm.org/10.1145/2366145.2366162},
- doi = {10.1145/2366145.2366162},
- acmid = {2366162},
- publisher = {ACM},
- address = {New York, NY, USA},
+ booktitle = {Material memex: automatic material suggestions for 3D objects},
+ booktitle = {Proc. SIGGRAPH Asia 2012},
 }
 
 @INPROCEEDINGS{Factorie,
     author = {Andrew Mccallum and Karl Schultz and Sameer Singh},
     title = {Factorie: Probabilistic programming via imperatively defined factor graphs},
-    booktitle = {In Advances in Neural Information Processing Systems 22},
-    year = {2009},
-    pages = {1249--1257}
+    booktitle = {Proc. NIPS 2009},
 }
 
 @article{Hastings,
@@ -167,28 +86,20 @@ author = {Hastings, W. K.},
 title = {Monte Carlo sampling methods using Markov chains and their applications},
 volume = {57}, 
 number = {1}, 
-pages = {97-109}, 
 year = {1970}, 
 doi = {10.1093/biomet/57.1.97}, 
-abstract ={SUMMARY A generalization of the sampling method introduced by Metropolis et al. (1953) is presented along with an exposition of the relevant theory, techniques of application and methods and difficulties of assessing the error in Monte Carlo estimates. Examples of the methods, including the generation of random orthogonal matrices and potential applications of the methods to numerical problems arising in statistics, are discussed.}, 
 URL = {http://biomet.oxfordjournals.org/content/57/1/97.abstract}, 
 eprint = {http://biomet.oxfordjournals.org/content/57/1/97.full.pdf+html}, 
 journal = {Biometrika} 
 }
 
 @article{Metropolis,
-    abstract = {{A general method, suitable for fast computing machines, for investigating such properties as equations of state for substances consisting of interacting individual molecules is described. The method consists of a modified Monte Carlo integration over configuration space. Results for the two-dimensional rigid-sphere system have been obtained on the Los Alamos MANIAC and are presented here. These results are compared to the free volume equation of state and to a four-term virial coefficient expansion.}},
     author = {Metropolis, Nicholas and Rosenbluth, Arianna W. and Rosenbluth, Marshall N. and Teller, Augusta H. and Teller, Edward},
-    citeulike-article-id = {531300},
-    citeulike-linkout-0 = {http://scitation.aip.org/getabs/servlet/GetabsServlet?prog=normal\&id=JCPSA6000021000006001087000001\&idtype=cvips\&gifs=yes},
-    citeulike-linkout-1 = {http://link.aip.org/link/?JCP/21/1087},
-    citeulike-linkout-2 = {http://dx.doi.org/10.1063/1.1699114},
     doi = {10.1063/1.1699114},
     issn = {00219606},
     journal = {The Journal of Chemical Physics},
     keywords = {annealing, simulated},
     number = {6},
-    pages = {1087--1092},
     posted-at = {2008-03-26 21:50:35},
     priority = {2},
     publisher = {AIP},
@@ -209,18 +120,7 @@ journal = {Biometrika}
 @inproceedings{MMR,
  author = {Carbonell, Jaime and Goldstein, Jade},
  title = {The use of MMR, diversity-based reranking for reordering documents and producing summaries},
- booktitle = {Proceedings of the 21st annual international ACM SIGIR conference on Research and development in information retrieval},
- series = {SIGIR '98},
- year = {1998},
- isbn = {1-58113-015-5},
- location = {Melbourne, Australia},
- pages = {335--336},
- numpages = {2},
- url = {http://doi.acm.org/10.1145/290941.291025},
- doi = {10.1145/290941.291025},
- acmid = {291025},
- publisher = {ACM},
- address = {New York, NY, USA},
+ booktitle = {Proc. ACM SIGIR 1998}
 } 
 
 @article{TruncatedGaussians,
@@ -235,7 +135,6 @@ url={http://dx.doi.org/10.1007/BF00143942},
 publisher={Kluwer Academic Publishers},
 keywords={Accept-reject; Gibbs sampling; Markov chain Monte Carlo; censored models; order-restricted models},
 author={Robert, Christian P.},
-pages={121-125},
 language={English}
 }
 
@@ -253,7 +152,6 @@ language={English}
   author={Carreira-Perpinan, M.A. and Hinton, G.E.},
   booktitle={Artificial Intelligence and Statistics},
   volume={2005},
-  pages={17},
   year={2005}
 }
 
@@ -262,14 +160,6 @@ language={English}
   author={Koller, D. and Friedman, N.},
   year={2009},
   publisher={The MIT Press}
-}
-
-@misc{ArtPrinciples,
-  author={Lovett, John},
-  title={Design and Colour},
-  year={1999},
-  howpublished = "\url{http://www.johnlovett.com/test.htm}",
-  note = {Retrieved January 4, 2013}
 }
 
 @book{ColorHarmonyBook,
@@ -286,10 +176,7 @@ language={English}
 @inproceedings{ColorNamingModels,
   title={Color naming models for color selection, image editing and palette design},
   author={Heer, J. and Stone, M.},
-  booktitle={Proceedings of the 2012 ACM annual conference on Human Factors in Computing Systems},
-  pages={1007--1016},
-  year={2012},
-  organization={ACM}
+  booktitle={Proc. ACM CHI 2012},
 }
 
 @article{AlbersInteractionOfColor,
@@ -298,27 +185,13 @@ language={English}
   journal={Art news},
   volume={62},
   number={1},
-  pages={33--35},
   year={1963}
 }
 
 @inproceedings{ThemeEnhancement,
  author = {Wang, Baoyuan and Yu, Yizhou and Wong, Tien-Tsin and Chen, Chun and Xu, Ying-Qing},
  title = {Data-driven image color theme enhancement},
- booktitle = {ACM SIGGRAPH Asia 2010 papers},
- series = {SIGGRAPH ASIA '10},
- year = {2010},
- isbn = {978-1-4503-0439-9},
- location = {Seoul, South Korea},
- pages = {146:1--146:10},
- articleno = {146},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/1866158.1866172},
- doi = {10.1145/1866158.1866172},
- acmid = {1866172},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {color optimization, color theme, histograms, soft segmentation, texture classes},
+ booktitle = {Proc. SIGGRAPH Asia 2010},
 } 
 
 @ARTICLE{FactorGraphs,
@@ -333,10 +206,9 @@ language={English}
 @article{ColorPaletteTools,
   title={Interactive color palette tools},
   author={Meier, B.J. and Spalter, A.M. and Karelitz, D.B.},
-  journal={Computer Graphics and Applications, IEEE},
+  journal={Computer Graphics and Applications},
   volume={24},
   number={3},
-  pages={64--72},
   year={2004},
   publisher={IEEE}
 }
@@ -344,20 +216,7 @@ language={English}
 @inproceedings{MerrellFurnitureLayout,
  author = {Merrell, Paul and Schkufza, Eric and Li, Zeyang and Agrawala, Maneesh and Koltun, Vladlen},
  title = {Interactive furniture layout using interior design guidelines},
- booktitle = {ACM SIGGRAPH 2011 papers},
- series = {SIGGRAPH '11},
- year = {2011},
- isbn = {978-1-4503-0943-1},
- location = {Vancouver, British Columbia, Canada},
- pages = {87:1--87:10},
- articleno = {87},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/1964921.1964982},
- doi = {10.1145/1964921.1964982},
- acmid = {1964982},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {furniture arrangement, interaction, interior design, layout interfaces},
+ booktitle = {Proc. SIGGRAPH 2011},
 } 
 
 @inproceedings{HamiltonianMCMC,
@@ -374,14 +233,10 @@ language={English}
   year={2011}
 }
 
-@article{SketchClassification,
+@inproceedings{SketchClassification,
 author={Eitz, Mathias and Hays, James and Alexa, Marc},
 title={How Do Humans Sketch Objects?},
-journal={ACM Trans. Graph. (Proc. SIGGRAPH)},
-year={2012},
-volume={31},
-number={4},
-pages = {44:1--44:10}
+booktitle={Proc. SIGGRAPH 2012},
 }
 
 @article{ReversibleJumpMCMC,
@@ -442,7 +297,6 @@ journal = {Biometrika}
   journal={Computers \& Mathematics with Applications},
   volume={33},
   number={11},
-  pages={1--9},
   year={1997},
   publisher={Elsevier}
 }
@@ -459,7 +313,6 @@ title={A Practical Guide to Training Restricted Boltzmann Machines},
 url={http://dx.doi.org/10.1007/978-3-642-35289-8_32},
 publisher={Springer Berlin Heidelberg},
 author={Hinton, Geoffrey E.},
-pages={599-619}
 }
 
 @article{IntrinsicImages,
@@ -492,35 +345,17 @@ pages={599-619}
   publisher={Books on Demand}
 }
 
-@article{YiTingLARJ,
+@inproceedings{YiTingLARJ,
  author = {Yeh, Yi-Ting and Yang, Lingfeng and Watson, Matthew and Goodman, Noah D. and Hanrahan, Pat},
  title = {Synthesizing open worlds with constraints using locally annealed reversible jump MCMC},
- journal = {ACM Trans. Graph.},
- issue_date = {July 2012},
- volume = {31},
- number = {4},
- month = jul,
- year = {2012},
- issn = {0730-0301},
- pages = {56:1--56:11},
- articleno = {56},
- numpages = {11},
- url = {http://doi.acm.org/10.1145/2185520.2185552},
- doi = {10.1145/2185520.2185552},
- acmid = {2185552},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {constrained synthesis, factor graphs, open worlds},
-}
+ booktitle = {Proc. SIGGRAPH 2012},
+ }
 
 @article{CIEDE2000,
     author = {Sharma, G. and Wu, W. and Dalal, E. N.},
-    citeulike-article-id = {6930392},
-    citeulike-linkout-0 = {http://www.ece.rochester.edu/\~{}gsharma/ciede2000/},
     journal = {Color research and application},
     keywords = {image-quality},
     number = {1},
-    pages = {21--30},
     posted-at = {2010-03-30 18:14:14},
     priority = {2},
     publisher = {New York: Wiley, 1976-},
